// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.render(thread, message, options) render global actions without a chat target 1`] = `
{
  "jobs": [
    {
      "agentId": 12345,
      "files": undefined,
      "key": undefined,
      "method": "editMessageText",
      "params": {
        "disable_web_page_preview": undefined,
        "inline_message_id": "1",
        "message_id": undefined,
        "parse_mode": "HTML",
        "reply_markup": undefined,
        "text": "foo <b>bar</b>",
      },
    },
    {
      "agentId": 12345,
      "files": undefined,
      "key": undefined,
      "method": "editMessageMedia",
      "params": {
        "inline_message_id": "2",
        "media": {
          "caption": undefined,
          "media": "https://sociably.io/trollface.png",
          "parse_mode": "HTML",
          "type": "photo",
        },
        "message_id": undefined,
        "reply_markup": undefined,
      },
    },
  ],
  "results": [
    {
      "ok": true,
      "result": {
        "id": "1",
      },
    },
    {
      "ok": true,
      "result": {
        "id": "2",
      },
    },
  ],
  "tasks": [
    {
      "payload": [
        {
          "agentId": 12345,
          "files": undefined,
          "key": undefined,
          "method": "editMessageText",
          "params": {
            "disable_web_page_preview": undefined,
            "inline_message_id": "1",
            "message_id": undefined,
            "parse_mode": "HTML",
            "reply_markup": undefined,
            "text": "foo <b>bar</b>",
          },
        },
        {
          "agentId": 12345,
          "files": undefined,
          "key": undefined,
          "method": "editMessageMedia",
          "params": {
            "inline_message_id": "2",
            "media": {
              "caption": undefined,
              "media": "https://sociably.io/trollface.png",
              "parse_mode": "HTML",
              "type": "photo",
            },
            "message_id": undefined,
            "reply_markup": undefined,
          },
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;

exports[`.render(thread, message, options) send rendered messages to telegram api 1`] = `
{
  "jobs": [
    {
      "agentId": 12345,
      "files": undefined,
      "key": "tg.12345.67890",
      "method": "sendMessage",
      "params": {
        "chat_id": 67890,
        "disable_notification": undefined,
        "parse_mode": "HTML",
        "text": "Hello <b>World!</b>",
      },
    },
    {
      "agentId": 12345,
      "files": undefined,
      "key": "tg.12345.67890",
      "method": "sendPhoto",
      "params": {
        "caption": undefined,
        "chat_id": 67890,
        "disable_notification": undefined,
        "parse_mode": "HTML",
        "photo": "https://sociably.io/greeting.png",
        "reply_markup": {
          "force_reply": true,
          "selective": undefined,
        },
        "reply_to_message_id": undefined,
      },
    },
  ],
  "results": [
    {
      "ok": true,
      "result": {
        "id": 1,
      },
    },
    {
      "ok": true,
      "result": {
        "id": 2,
      },
    },
  ],
  "tasks": [
    {
      "payload": [
        {
          "agentId": 12345,
          "files": undefined,
          "key": "tg.12345.67890",
          "method": "sendMessage",
          "params": {
            "chat_id": 67890,
            "disable_notification": undefined,
            "parse_mode": "HTML",
            "text": "Hello <b>World!</b>",
          },
        },
        {
          "agentId": 12345,
          "files": undefined,
          "key": "tg.12345.67890",
          "method": "sendPhoto",
          "params": {
            "caption": undefined,
            "chat_id": 67890,
            "disable_notification": undefined,
            "parse_mode": "HTML",
            "photo": "https://sociably.io/greeting.png",
            "reply_markup": {
              "force_reply": true,
              "selective": undefined,
            },
            "reply_to_message_id": undefined,
          },
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;
